--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-#FHSU CSCI441-VA 2022F - Group 10 Project Website
+FHSU CSCI441-VA 2022F - Group 10 Project Website
 
 Live at https://fhsu-csci-675-group-10.onrender.com
